<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rentalz_bg2"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="373dp"
        android:layout_height="615dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_layout_form">

        <TextView
            android:id="@+id/txt_logo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/bevietnambold"
            android:inputType="none"
            android:text="@string/logo_app"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/txt_aim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_logo_app"
            android:layout_centerHorizontal="true"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/bevietnammediumitalic"
            android:inputType="none"
            android:text="@string/aim"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_aim"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_propertyType"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/property_type"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp">

                <AutoCompleteTextView
                    android:id="@+id/actxt_propertyType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/lo_bedroom_dateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_propertyType"
                android:layout_marginTop="5dp"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_bedroom"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="59dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="false"
                    android:hint="@string/bedroom"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:errorEnabled="true">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/actxt_bedroom"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="none" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_date_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_time"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtxt_date_time"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_monthly_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_bedroom_dateTime"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/monthly_price"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp"
                app:suffixText="@string/suffix_txt_currency">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_monthly_price"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/lo_furniture_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_monthly_price"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_radiogroup_furniture"
                android:hint="@string/furniture_type">

                <TextView
                    android:id="@+id/txt_furniture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/furniture_type"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/rg_furniture_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_furniture"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_furnished"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_marginStart="3dp"
                        android:text="@string/rb_furnished"
                        android:textSize="12sp" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_unfurnished"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:text="@string/rb_unfurnished"
                        android:textSize="12sp" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_part_furnished"
                        android:layout_width="139dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_part_furnished"
                        android:textSize="12sp" />

                </RadioGroup>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo_furniture_type"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/note"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_note"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:inputType="textMultiLine"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name_reporter"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_note"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/name_of_reporter"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxt_name"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_name_reporter"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/btn_submit" />
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>